fix:align amount & symbol, reduce space below title & content

--- a/src/modules/dashboard/components/ColonyFunding/ColonyFunding.css
+++ b/src/modules/dashboard/components/ColonyFunding/ColonyFunding.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  margin-bottom: 35px;
+  margin-bottom: 26px;
   border-bottom: 1px solid var(--temp-grey-5);
 }
 
